move to python3.8

--- a/app/templates/index.htm
+++ b/app/templates/index.htm
@@ -2,7 +2,10 @@
 {% block content %}
 <span>{% if cat.comment %}{{cat.comment}}{% endif %}</span>
 <form id="kittie" action="/cat/next" method="POST">
-<div class="cat-pic" align="center"><a href="#" onclick="document.getElementById('kittie').submit()"><img id="cat" src="{{cat.url}}" /><br /></a></div>
-<!-- a href="/cat/next">Next</a-->
+  <div class="cat-pic" align="center">
+      <a href="/" onclick="document.getElementById('kittie').submit(); return false;"><img id="cat" src="{{cat.url}}" />
+          <br />
+      </a>
+  </div>
 </form>
 {% endblock %}
