--- a/app/templates/base.htm
+++ b/app/templates/base.htm
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>Алёшка.site — сайт Алексея</title>
 	<title>{% if title %}{{title}} - {% endif %}BooksDB</title>
 	<link rel="stylesheet" href="/static/main.css">
 	<!--script type="text/javascript" src="/static/main.js"></script-->
