--- a/app/templates/base.htm
+++ b/app/templates/base.htm
@@ -2,6 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width; initial-scale=1">
     <title>Алёшка.site — сайт Алексея</title>
 	<link rel="stylesheet" href="/static/main.css">
 	<!--script type="text/javascript" src="/static/main.js"></script-->
