--- a/app/templates/index.htm
+++ b/app/templates/index.htm
@@ -2,15 +2,12 @@
 {% block content %}
 <form id="kittie" action="/cat/next" method="POST">
   <div align="center">
+{% if cat.comment %}<div class="comment">{{cat.comment}}</div>{% endif %}
       <a href="/" onclick="document.getElementById('kittie').submit(); return false;">
-            <div style="background:url({{cat.url}}) no-repeat center center; height: {{cat.height}}px; -webkit-background-size: contain;
+            <div style="background:url({{cat.url}}) no-repeat top center; height: {{cat.height}}px; -webkit-background-size: contain;
 -moz-background-size: contain; -o-background-size: contain; background-size: contain;">
-                &nbsp;
             </div>
       </a>
   </div>
-
-
 </form>
-{% if cat.comment %}<div class="comment">{{cat.comment}}</div>{% endif %}
 {% endblock %}
